--- a/ChatContext/ChatContext.csproj
+++ b/ChatContext/ChatContext.csproj
@@ -3,9 +3,9 @@
   <Import Project="Dalamud.Plugin.Bootstrap.targets"/>
 
   <PropertyGroup>
-    <Version>0.0.0.1</Version>
-    <Description>A sample plugin.</Description>
-    <PackageProjectUrl>https://github.com/goatcorp/ChatContext</PackageProjectUrl>
+    <Version>1.0.0.0</Version>
+    <Description>Dalamud plugin to add sender target to chat messages.</Description>
+    <PackageProjectUrl>https://github.com/anya-hichu/ChatContext</PackageProjectUrl>
     <PackageLicenseExpression>AGPL-3.0-or-later</PackageLicenseExpression>
     <IsPackable>false</IsPackable>
   </PropertyGroup>
