--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -11,16 +11,26 @@ on:
 
 jobs:
   build:
-    name: Build on Windows
-    permissions:
-      id-token: write
-      contents: read
-      attestations: write
-    runs-on: windows-2022
+    runs-on: windows-latest
     steps:
-      - uses: actions/checkout@v2
-      - uses: actions/setup-dotnet@v3
+      - uses: actions/checkout@v3.5.2
+      - name: Setup .NET
+        uses: actions/setup-dotnet@v3.0.3
         with:
-          dotnet-version: '8.0.100'
+          dotnet-version: '8.x.x'
+      - name: Restore dependencies
+        run: dotnet restore
+      - name: Download Dalamud
+        run: |
+          Invoke-WebRequest -Uri https://goatcorp.github.io/dalamud-distrib/stg/latest.zip -OutFile latest.zip
+          Expand-Archive -Force latest.zip "$env:AppData\XIVLauncher\addon\Hooks\dev\"
       - name: Build
-        run: dotnet build
+        run: |
+          dotnet build --no-restore --configuration Release --nologo
+      - name: Rename file 
+        run: mv ${{ github.workspace }}/ChatContext/bin/x64/Release/ChatContext/latest.zip ${{ github.workspace }}/ChatContext/bin/x64/Release/ChatContext/ChatContext.zip
+      - name: Upload a Build Artifact
+        uses: actions/upload-artifact@v3.1.2
+        with:
+          path: |
+            ${{ github.workspace }}/ChatContext/bin/x64/Release/
