--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -10,27 +10,28 @@ on:
     branches: [ "master" ]
 
 jobs:
-  build:
-    runs-on: windows-latest
+  Build:
+    runs-on: ubuntu-latest
+    env:
+        DALAMUD_HOME: /tmp/dalamud
     steps:
-      - uses: actions/checkout@v3.5.2
-      - name: Setup .NET
-        uses: actions/setup-dotnet@v3.0.3
+      - name: Checkout Repository
+        uses: actions/checkout@v4
         with:
-          dotnet-version: '8.x.x'
-      - name: Restore dependencies
+          submodules: true
+
+      - name: Set up .NET
+        uses: actions/setup-dotnet@v3
+        with:
+          dotnet-version: 8.0.x
+          
+      - name: Download Dalamud Latest
+        run: |
+          wget https://goatcorp.github.io/dalamud-distrib/latest.zip -O ${{ env.DALAMUD_HOME }}.zip
+          unzip ${{ env.DALAMUD_HOME }}.zip -d ${{ env.DALAMUD_HOME }}
+
+      - name: Restore Project
         run: dotnet restore
-      - name: Download Dalamud
-        run: |
-          Invoke-WebRequest -Uri https://goatcorp.github.io/dalamud-distrib/stg/latest.zip -OutFile latest.zip
-          Expand-Archive -Force latest.zip "$env:AppData\XIVLauncher\addon\Hooks\dev\"
-      - name: Build
-        run: |
-          dotnet build --no-restore --configuration Release --nologo
-      - name: Rename file 
-        run: mv ${{ github.workspace }}/ChatContext/bin/x64/Release/ChatContext/latest.zip ${{ github.workspace }}/ChatContext/bin/x64/Release/ChatContext/ChatContext.zip
-      - name: Upload a Build Artifact
-        uses: actions/upload-artifact@v3.1.2
-        with:
-          path: |
-            ${{ github.workspace }}/ChatContext/bin/x64/Release/
+
+      - name: Build Project
+        run: dotnet build --configuration Release ChatContext/ChatContext.csproj
