--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -30,3 +30,10 @@ jobs:
 
       - name: Build Project
         run: dotnet build --configuration Release ChatContext/ChatContext.csproj
+
+      - name: Archive Artifacts
+        uses: actions/upload-artifact@v4
+        with:
+          name: ChatContext
+          path: ChatContext/bin/Release/*
+
