--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -36,5 +36,5 @@ jobs:
         with:
           name: ChatContext
           path: |
-	     ChatContext/bin/Release
-             !ChatContext/bin/Release/ChatContext
+             ChatContext/bin/Release/*
+             !ChatContext/bin/Release/ChatContext/*
