--- a/.github/workflows/build_and_publish.yml
+++ b/.github/workflows/build_and_publish.yml
@@ -33,6 +33,14 @@ jobs:
       - name: Build Project
         run: dotnet build --configuration Release ChatContext/ChatContext.csproj -p:AssemblyVersion=${{ env.tag }}
 
+      - name: Archive Artifacts
+        uses: actions/upload-artifact@v4
+        with:
+          name: ChatContext
+          path: |
+             ChatContext/bin/Release/*
+             !ChatContext/bin/Release/ChatContext/*
+
       #- name: Publish Version
       #  uses: PunishXIV/dynamis-action@v1
       #  id: dynamis
