--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -31,7 +31,7 @@ jobs:
       - name: Build Project
         run: dotnet build --configuration Release ChatContext/ChatContext.csproj
 
-      - name: Archive Artifacts
+      - name: Upload Artifacts
         uses: actions/upload-artifact@v4
         with:
           name: ChatContext
