--- a/ChatContext/ChatContext.csproj
+++ b/ChatContext/ChatContext.csproj
@@ -1,7 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<Project Sdk="Microsoft.NET.Sdk">
-  <Import Project="Dalamud.Plugin.Bootstrap.targets" />
-
+<Project Sdk="Dalamud.NET.SDK/12.0.0">
   <PropertyGroup>
     <Description>Dalamud plugin to add sender target to chat messages.</Description>
     <PackageProjectUrl>https://github.com/anya-hichu/ChatContext</PackageProjectUrl>
@@ -9,8 +7,4 @@
     <IsPackable>false</IsPackable>
     <TargetFramework>net9.0-windows7.0</TargetFramework>
   </PropertyGroup>
-
-  <ItemGroup>
-    <PackageReference Update="DalamudPackager" Version="12.0.0" />
-  </ItemGroup>
 </Project>
